--- a/tensorflow_cnn_cifar10.ipynb
+++ b/tensorflow_cnn_cifar10.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,18 +117,20 @@
     "    input_layer = tf.reshape(x, [-1, 32, 32, 3])\n",
     "    \n",
     "    conv1 = tf.layers.conv2d(input_layer, filters=20, kernel_size=5, padding=\"valid\")\n",
-    "    bn1 = tf.layers.batch_normalization(conv1, training=training, axis=-1, trainable=True, momentum=0.99)\n",
-    "    act1 = tf.nn.relu(bn1)\n",
+    "    #bn1 = tf.layers.batch_normalization(conv1, training=training, axis=-1, momentum=0.99)\n",
+    "    act1 = tf.nn.relu(conv1)\n",
     "    pool1 = tf.layers.max_pooling2d(act1, pool_size=2, strides=2)\n",
-    "    conv2 = tf.layers.conv2d(pool1, filters=50, kernel_size=[5, 5], padding=\"valid\", activation=tf.nn.relu)\n",
-    "    pool2 = tf.layers.max_pooling2d(conv2, pool_size=[2, 2], strides=2)\n",
+    "    \n",
+    "    conv2 = tf.layers.conv2d(pool1, filters=50, kernel_size=[5, 5], padding=\"valid\")\n",
+    "    act2 = tf.nn.relu(conv2)\n",
+    "    pool2 = tf.layers.max_pooling2d(act2, pool_size=[2, 2], strides=2)\n",
     "    \n",
     "    print(pool2.get_shape())\n",
     "    \n",
     "    # 2次元テンソルに変換\n",
     "    pool2_flat = tf.reshape(pool2, [-1, 1250])\n",
-    "    fc1 = tf.layers.dense(pool2_flat, 700, activation=tf.nn.relu)\n",
-    "    fc2 = tf.layers.dense(fc1, 500, activation=tf.nn.relu)\n",
+    "    fc1 = tf.layers.dense(pool2_flat, 500, activation=tf.nn.relu)\n",
+    "    fc2 = tf.layers.dense(fc1, 100, activation=tf.nn.relu)\n",
     "    out = tf.layers.dense(fc2, 10)\n",
     "    \n",
     "    return out"
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -161,9 +163,9 @@
     "# Learning rate (学習率)\n",
     "lr = 0.001\n",
     "# epoch数 （学習回数）\n",
-    "n_epoch = 25\n",
+    "n_epoch = 50\n",
     "# ミニバッチ学習における1バッチのデータ数\n",
-    "batchsize = 256\n",
+    "batchsize = 128\n",
     "\n",
     "# 入力\n",
     "x = tf.placeholder(tf.float32, [None, 32, 32, 3]) # 32*32次元 \n",
@@ -205,10 +207,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0 | Train loss 1.71460 | Test Accuracy: 0.162\n",
-      "epoch 1 | Train loss 1.37888 | Test Accuracy: 0.211\n",
-      "epoch 2 | Train loss 1.24722 | Test Accuracy: 0.222\n",
-      "epoch 3 | Train loss 1.13800 | "
+      "epoch  0 | Train loss 1.72214 | Test Accuracy: 0.468\n",
+      "epoch  1 | Train loss 1.43774 | Test Accuracy: 0.503\n",
+      "epoch  2 | Train loss 1.32801 | Test Accuracy: 0.547\n",
+      "epoch  3 | Train loss 1.24175 | Test Accuracy: 0.548\n",
+      "epoch  4 | "
      ]
     }
    ],
@@ -217,7 +220,7 @@
     "    sess.run(tf.global_variables_initializer())\n",
     "    \n",
     "    for epoch in range(n_epoch):\n",
-    "        print ('epoch %d | ' % epoch, end=\"\")\n",
+    "        print ('epoch %2d | ' % epoch, end=\"\")\n",
     "\n",
     "        # Training\n",
     "        sum_loss = 0\n",
@@ -227,6 +230,7 @@
     "        for i in range(0, N_train, batchsize):\n",
     "            # ミニバッチ分のデータを取ってくる\n",
     "            X_batch = X_train[perm[i:i+batchsize]]\n",
+    "            X_batch += np.random.uniform(-0.1, 0.1, X_batch.shape)\n",
     "            t_batch = T_train[perm[i:i+batchsize]]\n",
     "\n",
     "            _, loss = sess.run([optimizer, cost], feed_dict={x:X_batch, t:t_batch, training:True})\n",
