--- a/tensorflow_cnn_cifar10.ipynb
+++ b/tensorflow_cnn_cifar10.ipynb
@@ -211,7 +211,11 @@
       "epoch  1 | Train loss 1.43774 | Test Accuracy: 0.503\n",
       "epoch  2 | Train loss 1.32801 | Test Accuracy: 0.547\n",
       "epoch  3 | Train loss 1.24175 | Test Accuracy: 0.548\n",
-      "epoch  4 | "
+      "epoch  4 | Train loss 1.17365 | Test Accuracy: 0.579\n",
+      "epoch  5 | Train loss 1.10192 | Test Accuracy: 0.579\n",
+      "epoch  6 | Train loss 1.05721 | Test Accuracy: 0.578\n",
+      "epoch  7 | Train loss 1.00046 | Test Accuracy: 0.595\n",
+      "epoch  8 | "
      ]
     }
    ],
