--- a/tensorflow_cnn_cifar10_nvlabs.ipynb
+++ b/tensorflow_cnn_cifar10_nvlabs.ipynb
@@ -116,7 +116,7 @@
     "    act2 = tf.nn.relu(conv2)\n",
     "    \n",
     "    pool1 = tf.layers.max_pooling2d(act2, pool_size=2, strides=2)\n",
-    "    drop1 = tf.layers.dropout(pool1, 0.5, training=training)\n",
+    "    drop1 = tf.layers.dropout(pool1, 0.2, training=training)\n",
     "    \n",
     "    conv3 = tf.layers.conv2d(drop1, filters=64, kernel_size=3, padding=\"same\")\n",
     "    act3 = tf.nn.relu(conv3)\n",
@@ -125,7 +125,7 @@
     "    act4 = tf.nn.relu(conv4)\n",
     "    \n",
     "    pool2 = tf.layers.max_pooling2d(act4, pool_size=[2, 2], strides=2)\n",
-    "    drop2 = tf.layers.dropout(pool2, 0.5, training=training)\n",
+    "    drop2 = tf.layers.dropout(pool2, 0.2, training=training)\n",
     "    \n",
     "    conv5 = tf.layers.conv2d(drop2, filters=128, kernel_size=3, padding=\"same\")\n",
     "    act5 = tf.nn.relu(conv5)\n",
@@ -134,15 +134,17 @@
     "    act6 = tf.nn.relu(conv6)\n",
     "        \n",
     "    pool3 = tf.layers.max_pooling2d(act6, pool_size=[2, 2], strides=2)\n",
-    "    drop3 = tf.layers.dropout(pool3, 0.5, training=training)\n",
+    "    drop3 = tf.layers.dropout(pool3, 0.2, training=training)\n",
     "    \n",
     "    print(drop3.get_shape())\n",
     "    \n",
     "    # 2次元テンソルに変換\n",
     "    flat = tf.reshape(drop3, [-1, 4*4*128])\n",
     "    fc1 = tf.layers.dense(flat, 1024, activation=tf.nn.relu)\n",
-    "    fc2 = tf.layers.dense(fc1, 1024, activation=tf.nn.relu)\n",
-    "    out = tf.layers.dense(fc2, 10)\n",
+    "    drop4 = tf.layers.dropout(fc1, 0.5, training=training)\n",
+    "    fc2 = tf.layers.dense(drop4, 1024, activation=tf.nn.relu)\n",
+    "    drop5 = tf.layers.dropout(fc2, 0.5, training=training)\n",
+    "    out = tf.layers.dense(drop5, 10)\n",
     "    \n",
     "    return out"
    ]
@@ -216,7 +218,7 @@
     "        for i in range(0, N_train, batchsize):\n",
     "            # ミニバッチ分のデータを取ってくる\n",
     "            X_batch = X_train[perm[i:i+batchsize]]\n",
-    "            X_batch += np.random.uniform(-0.1, 0.1, X_batch.shape)\n",
+    "            #X_batch += np.random.uniform(-0.1, 0.1, X_batch.shape)\n",
     "            t_batch = T_train[perm[i:i+batchsize]]\n",
     "\n",
     "            _, loss = sess.run([optimizer, cost], feed_dict={x:X_batch, t:t_batch, training:True})\n",
@@ -239,21 +241,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
