--- a/tensorflow_cnn_cifar10_nvlabs.ipynb
+++ b/tensorflow_cnn_cifar10_nvlabs.ipynb
@@ -57,6 +57,7 @@
     "X_train = np.asarray(X_train).reshape(-1, 3, 32, 32).transpose(0,2,3,1)\n",
     "T_train = np.asarray(T_train)\n",
     "X_train = X_train/255.\n",
+    "\n",
     "#テストデータ\n",
     "with open('cifar-10-batches-py/test_batch', 'r') as f:\n",
     "    dataset = pickle.load(f)\n",
@@ -64,14 +65,29 @@
     "X_test = np.asarray(X_test).reshape(-1, 3, 32, 32).transpose(0,2,3,1)\n",
     "T_test = np.asarray(T_test)\n",
     "X_test = X_test/255.\n",
-    "\n",
-    "# データのサイズ\n",
-    "N_train = X_train.shape[0]\n",
-    "N_test = X_test.shape[0]\n",
+    "test_idx = np.random.randint(0, X_test.shape[0], 5000)\n",
+    "X_test = X_test[test_idx]\n",
+    "T_test = T_test[test_idx]\n",
     "\n",
     "# ラベルデータをone-hot-vectorに変換\n",
     "T_train = np.eye(10)[T_train.astype(\"int\")]\n",
-    "T_test = np.eye(10)[T_test.astype(\"int\")]"
+    "T_test = np.eye(10)[T_test.astype(\"int\")]\n",
+    "\n",
+    "for i in range(10000):\n",
+    "    print(i)\n",
+    "    r = np.random.rand()\n",
+    "    sample_idx = np.random.randint(0, X_train.shape[0], 2)\n",
+    "    if i == 0:\n",
+    "        X_aug = np.average(X_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,32,32,3)\n",
+    "        T_aug = np.average(T_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,10)\n",
+    "    else:\n",
+    "        X_aug = np.concatenate((X_aug, np.average(X_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,32,32,3)))\n",
+    "        T_aug = np.concatenate((T_aug, np.average(T_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,10)))\n",
+    "X_train = np.concatenate((X_train, X_aug))\n",
+    "T_train = np.concatenate((T_train, T_aug))\n",
+    "# データのサイズ\n",
+    "N_train = X_train.shape[0]\n",
+    "N_test = X_test.shape[0]"
    ]
   },
   {
@@ -166,7 +182,7 @@
     "\n",
     "# パラメータ\n",
     "lr = 0.001\n",
-    "n_epoch = 100\n",
+    "n_epoch = 50\n",
     "batchsize = 64\n",
     "\n",
     "# 入力\n",
@@ -218,7 +234,6 @@
     "        for i in range(0, N_train, batchsize):\n",
     "            # ミニバッチ分のデータを取ってくる\n",
     "            X_batch = X_train[perm[i:i+batchsize]]\n",
-    "            #X_batch += np.random.uniform(-0.1, 0.1, X_batch.shape)\n",
     "            t_batch = T_train[perm[i:i+batchsize]]\n",
     "\n",
     "            _, loss = sess.run([optimizer, cost], feed_dict={x:X_batch, t:t_batch, training:True})\n",
@@ -228,7 +243,7 @@
     "        print('Train loss %.5f | ' %(loss), end=\"\")\n",
     "\n",
     "        # Test model\n",
-    "        print (\"Test Accuracy: %.3f\"%(accuracy.eval(feed_dict={x: X_test[:5000], t: T_test[:5000], training:False})))"
+    "        print (\"Test Accuracy: %.3f\"%(accuracy.eval(feed_dict={x: X_test, t: T_test, training:False})))"
    ]
   },
   {
@@ -241,21 +256,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
