--- a/tensorflow_cnn_cifar10_nvlabs.ipynb
+++ b/tensorflow_cnn_cifar10_nvlabs.ipynb
@@ -72,19 +72,6 @@
     "# ラベルデータをone-hot-vectorに変換\n",
     "T_train = np.eye(10)[T_train.astype(\"int\")]\n",
     "T_test = np.eye(10)[T_test.astype(\"int\")]\n",
-    "\n",
-    "for i in range(10000):\n",
-    "    print(i)\n",
-    "    r = np.random.rand()\n",
-    "    sample_idx = np.random.randint(0, X_train.shape[0], 2)\n",
-    "    if i == 0:\n",
-    "        X_aug = np.average(X_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,32,32,3)\n",
-    "        T_aug = np.average(T_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,10)\n",
-    "    else:\n",
-    "        X_aug = np.concatenate((X_aug, np.average(X_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,32,32,3)))\n",
-    "        T_aug = np.concatenate((T_aug, np.average(T_train[sample_idx], axis=0, weights=np.asarray([r, 1-r])).reshape(1,10)))\n",
-    "X_train = np.concatenate((X_train, X_aug))\n",
-    "T_train = np.concatenate((T_train, T_aug))\n",
     "# データのサイズ\n",
     "N_train = X_train.shape[0]\n",
     "N_test = X_test.shape[0]"
@@ -154,11 +141,13 @@
     "    \n",
     "    print(drop3.get_shape())\n",
     "    \n",
+    "    he_init = tf.contrib.layers.variance_scaling_initializer()\n",
+    "    \n",
     "    # 2次元テンソルに変換\n",
     "    flat = tf.reshape(drop3, [-1, 4*4*128])\n",
-    "    fc1 = tf.layers.dense(flat, 1024, activation=tf.nn.relu)\n",
+    "    fc1 = tf.layers.dense(flat, 1024, activation=tf.nn.relu, kernel_initializer=he_init)\n",
     "    drop4 = tf.layers.dropout(fc1, 0.5, training=training)\n",
-    "    fc2 = tf.layers.dense(drop4, 1024, activation=tf.nn.relu)\n",
+    "    fc2 = tf.layers.dense(drop4, 1024, activation=tf.nn.relu, kernel_initializer=he_init)\n",
     "    drop5 = tf.layers.dropout(fc2, 0.5, training=training)\n",
     "    out = tf.layers.dense(drop5, 10)\n",
     "    \n",
@@ -259,18 +248,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
   }
  },
  "nbformat": 4,
