--- a/tensorflow_cnn_cifar10_nvlabs.ipynb
+++ b/tensorflow_cnn_cifar10_nvlabs.ipynb
@@ -112,28 +112,28 @@
     "def CNN(x, training):\n",
     "    input_layer = tf.reshape(x, [-1, 32, 32, 3])\n",
     "    \n",
-    "    conv1 = tf.layers.conv2d(input_layer, filters=32, kernel_size=3, padding=\"same\")\n",
+    "    conv1 = tf.layers.conv2d(input_layer, filters=64, kernel_size=3, padding=\"same\")\n",
     "    act1 = tf.nn.relu(conv1)\n",
     "    \n",
-    "    conv2 = tf.layers.conv2d(act1, filters=32, kernel_size=3, padding=\"same\")\n",
+    "    conv2 = tf.layers.conv2d(act1, filters=64, kernel_size=3, padding=\"same\")\n",
     "    act2 = tf.nn.relu(conv2)\n",
     "    \n",
     "    pool1 = tf.layers.max_pooling2d(act2, pool_size=2, strides=2)\n",
     "    drop1 = tf.layers.dropout(pool1, 0.2, training=training)\n",
     "    \n",
-    "    conv3 = tf.layers.conv2d(drop1, filters=64, kernel_size=3, padding=\"same\")\n",
+    "    conv3 = tf.layers.conv2d(drop1, filters=128, kernel_size=3, padding=\"same\")\n",
     "    act3 = tf.nn.relu(conv3)\n",
     "    \n",
-    "    conv4 = tf.layers.conv2d(act3, filters=64, kernel_size=3, padding=\"same\")\n",
+    "    conv4 = tf.layers.conv2d(act3, filters=128, kernel_size=3, padding=\"same\")\n",
     "    act4 = tf.nn.relu(conv4)\n",
     "    \n",
     "    pool2 = tf.layers.max_pooling2d(act4, pool_size=[2, 2], strides=2)\n",
     "    drop2 = tf.layers.dropout(pool2, 0.2, training=training)\n",
     "    \n",
-    "    conv5 = tf.layers.conv2d(drop2, filters=128, kernel_size=3, padding=\"same\")\n",
+    "    conv5 = tf.layers.conv2d(drop2, filters=256, kernel_size=3, padding=\"same\")\n",
     "    act5 = tf.nn.relu(conv5)\n",
     "    \n",
-    "    conv6 = tf.layers.conv2d(act5, filters=128, kernel_size=3, padding=\"same\")\n",
+    "    conv6 = tf.layers.conv2d(act5, filters=256, kernel_size=3, padding=\"same\")\n",
     "    act6 = tf.nn.relu(conv6)\n",
     "        \n",
     "    pool3 = tf.layers.max_pooling2d(act6, pool_size=[2, 2], strides=2)\n",
@@ -144,12 +144,12 @@
     "    he_init = tf.contrib.layers.variance_scaling_initializer()\n",
     "    \n",
     "    # 2次元テンソルに変換\n",
-    "    flat = tf.reshape(drop3, [-1, 4*4*128])\n",
-    "    fc1 = tf.layers.dense(flat, 1024, activation=tf.nn.relu, kernel_initializer=he_init)\n",
+    "    flat = tf.reshape(drop3, [-1, 4*4*256])\n",
+    "    fc1 = tf.layers.dense(flat, 512, activation=tf.nn.relu, kernel_initializer=he_init)\n",
     "    drop4 = tf.layers.dropout(fc1, 0.5, training=training)\n",
-    "    fc2 = tf.layers.dense(drop4, 1024, activation=tf.nn.relu, kernel_initializer=he_init)\n",
-    "    drop5 = tf.layers.dropout(fc2, 0.5, training=training)\n",
-    "    out = tf.layers.dense(drop5, 10)\n",
+    "    #fc2 = tf.layers.dense(drop4, 1024, activation=tf.nn.relu, kernel_initializer=he_init)\n",
+    "    #drop5 = tf.layers.dropout(fc2, 0.5, training=training)\n",
+    "    out = tf.layers.dense(drop4, 10)\n",
     "    \n",
     "    return out"
    ]
@@ -245,9 +245,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
